# fill-phones-from-webs

./: README.md
deliverect-order-sync/: .gitignore  ARCHITECTURE.md  README.md  app.py  config.example.yaml  pyproject.toml  run.bat  selectors.example.yaml
deliverect-order-sync/src/deliverect_sync/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_config.py  models.py
deliverect-order-sync/src/deliverect_sync/browser/: browser_factory.py  calibration.py  locator_registry.py  session_manager.py
deliverect-order-sync/src/deliverect_sync/browser/pages/: __init__.py  export_dialog.py  login_page.py  operations_page.py  order_details_page.py  orders_page.py
deliverect-order-sync/src/deliverect_sync/dashboard/: app.py
deliverect-order-sync/src/deliverect_sync/exporters/: error_report.py  excel_exporter.py
deliverect-order-sync/src/deliverect_sync/importers/: csv_detector.py  header_mapper.py  order_importer.py  validators.py
deliverect-order-sync/src/deliverect_sync/normalization/: dates.py  money.py  orders.py  phones.py  text.py
deliverect-order-sync/src/deliverect_sync/security/: __init__.py  auth_state.py  encryption.py  pii.py
deliverect-order-sync/src/deliverect_sync/storage/: database.py  migrations.py  repositories.py
deliverect-order-sync/src/deliverect_sync/workflow/: detail_fallback.py  direct_scrape.py  download_manager.py  export_job_matcher.py  export_workflow.py
deliverect-order-sync/tests/: conftest.py  test_dates.py  test_header_mapper.py  test_models.py  test_money.py  test_phones.py  test_text.py
